--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Kylerummens</title>
+  <title>kylerummens.com</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="manifest" href="site.webmanifest" />
+  <meta name="theme-color" content="#121212" media="(prefers-color-scheme: dark)">
+  <meta name="background-color" content="#121212" media="(prefers-color-scheme: dark)">
+  <link rel="icon" type="image/x-icon" href="/assets/favicons/favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@300;400;500;700&display=swap"
